# riddc-jbook

./: .firebaserc  .gitignore  Brewfile  Brewfile.lock.json  CONTRIBUTING.md  LICENSE  Pipfile  README.md  firebase.json  myst.yml  packages.config  pyproject.toml  pyvenv.cfg  requirements.txt
.github/workflows/: deploy.yml  firebase-hosting-merge.yml  firebase-hosting-pull-request.yml
Notebooks_Data/OSOM_Tides/TIDES_000/: tide_CPTR1.nc  tide_FOXR1.nc  tide_FRVM3.nc  tide_NWPR1.nc
Notebooks_Data/OSOM_Tides/TIDES_001/: tide_BZBM3.nc  tide_FRVM3.nc
Notebooks_Data/Tides/Average/: CO-OPS_8452944_average.csv
notebooks_data/osom_tides/TIDES_000/: tide_NTKM3.nc
notebooks_data/osom_tides/TIDES_001/: tide_NLNC3.nc  tide_NWPR1.nc  tide_QPTR1.nc
notebooks_data/osom_tides/tides_000/: tide_BZBM3.nc  tide_MTKN6.nc  tide_NLNC3.nc  tide_QPTR1.nc
notebooks_data/osom_tides/tides_001/: tide_CPTR1.nc  tide_FOXR1.nc  tide_MTKN6.nc  tide_NTKM3.nc
notebooks_data/tides/average/: CO-OPS_8447386_average.csv  CO-OPS_8447930_average.csv  CO-OPS_8449130_average.csv  CO-OPS_8452660_average.csv  CO-OPS_8454000_average.csv  CO-OPS_8454049_average.csv  CO-OPS_8461490_average.csv  CO-OPS_8510560_average.csv
riddc/: _config.yml  _toc.yml  custom.css
riddc/.github/workflows/: deploy.yml
riddc/_build/.doctrees/: environment.pickle
riddc/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
riddc/notebooks/benny/: Mapping_first_try.ipynb  Ultra_High_Res_SST.ipynb  first_example_aquarius.ipynb
riddc/notebooks/fox-kemper/: Ella_summer2020.ipynb  (+22 more)
(+37 files in other folders)
