[tool.poetry]
name = "riddc-jbook"
version = "0.1.0"
description = ""
authors = ["fernandogelin <fernando@fernandogelin.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
jupyter-book = "^0.8.1"
cookiecutter = "^1.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
