[project]
name = "riddc-jbook"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "cartopy>=0.21.1",
    "datetime>=5.5",
    "eofs>=2.0.0",
    "geopandas>=0.13.2",
    "h5py>=3.11.0",
    "jupyter-book>=0.15.1",
    "matplotlib>=3.7.5",
    "netcdf4>=1.7.2",
    "noaa-coops>=0.1.9",
    "numpy>=1.24.4",
    "pandas>=2.0.3",
    "pyogrio>=0.9.0",
    "scipy>=1.10.1",
    "shapely>=2.0.7",
    "tornado>=6.4.2",
    "xarray>=2023.1.0",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
]
